# arc-2024

./: .gitignore  README.md  kaggle_push.ps1  pyproject-linux.toml  pyproject.toml  site_packages_push.ps1
.github/workflows/: CODEOWNERS
.kaggle_data/arc_2024/data_management/: data_manager.py
arc_2024/: .env.kaggle  arcprize_2024.ipynb  grid_size_solver.py  kernel-metadata.json  main.py  runner.py  solver.py
arc_2024/data/: submission.json
arc_2024/data/arc_parsed_popper/007bbfb7/: bias.pl  bk.pl  exs.pl  test.pl
arc_2024/data/arc_parsed_popper/00d62c1b/: bk.pl  exs.pl  test.pl
arc_2024/data/arc_parsed_popper/017c7c7b/: bk.pl  exs.pl  test.pl
arc_2024/data/arc_parsed_popper/025d127b/: bias.pl  bk.pl  exs.pl  test.pl
arc_2024/data/arc_parsed_popper/045e512c/: bk.pl  exs.pl  test.pl
arc_2024/data/arc_parsed_popper/0520fde7/: bk.pl  exs.pl  test.pl
arc_2024/data/arc_parsed_popper/05269061/: bk.pl  exs.pl  (+1 more)
arc_2024/data_management/: data_manager.py
arc_2024/inductive_logic_programming/: FOIL.py  first_order_logic.py
arc_2024/popper/: bkcons.py  combine.py  gen2.py  gen3.py  generate.py  loop.py  maxsat.py  tester.py  util.py
arc_2024/representations/: colour.py  helper.py  interpreter.py  rotatable_mask_shape.py  shape.py  shape_type.py
kaggle_data/: dataset-metadata.json
tests/arc_2024/: test_grid_size_solver.py  test_solver.py
tests/arc_2024/data_management/: conftest.py  test_data_management.py
tests/arc_2024/inductive_logic_programming/: test_FOIL.py
tests/arc_2024/representations/: conftest.py  test_interpreter.py  test_shape.py
(+1333 files in other folders)
