[tool.poetry]
name = "arc-2024"
version = "0.1.0"
description = ""
authors = ["Alex Wernick <alex.j.wernick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
